--- a/articulos/templates/base.html
+++ b/articulos/templates/base.html
@@ -40,6 +40,9 @@
 		<!-- Theme Custom CSS -->
 		<link rel="stylesheet" href="{% static 'assets/stylesheets/theme-custom.css' %}">
 
+		<!-- Mis Estilos -->
+		<link rel="stylesheet" href="{% static 'assets/stylesheets/papeleria.css' %}">
+
 		<!-- Head Libs -->
 		<script src="{% static 'assets/vendor/modernizr/modernizr.js' %}"></script>
 
