--- a/articulos/templates/nuevo_articulo.html
+++ b/articulos/templates/nuevo_articulo.html
@@ -8,7 +8,7 @@
     <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ formualario.as_p }}
-        <button type="submit">Guardar</button>
-        <a href="{% url 'articulos' %}">Regresar</a>
+        <button type="submit" class="btn btn-success">Guardar</button>
+        <a href="{% url 'articulos' %}" class="btn btn-danger">Cancelar</a>
     </form>
 {% endblock %}
